<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckInTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chatbutton">C</string>
    <string name="str_img1">Check in talk ile farklı bir deneyim yaşamaya hazır mısın?</string>
    <string name="str_img2">Çevrendekileri fark etmekte zorlanıyor musun?</string>
    <string name="str_img3">Yaşamın kendisi burada peki sen nerdesin?</string>
    <string name="str_img4">Buradayım diyorsan kendini göster.</string>
    <string name="str_img5">Yaşayacağın deneyimleri çevrendekilerle paylaş.</string>
    <string name="register">" REGISTER "</string>
    <string name="login">" LOGIN "</string>
    <string name="register_info"> "Katıl'a tıklayarak <b>Kullanıcı Sözleşmesi</b>, <b>Gizlilik Politikası</b> ve <b>Çerez Politikasını</b> kabul etmiş olursunuz."</string>
</resources>
